--- a/package.json
+++ b/package.json
@@ -1,1 +1,25 @@
-
+{
+  "name": "teest",
+  "version": "1.0.0",
+  "description": "",
+  "main": "script.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node server.js"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "dependencies": {
+    "body-parser": "^1.20.3",
+    "cors": "^2.8.5",
+    "date-fns": "^2.28.0",
+    "date-fns-tz": "^1.1.5",
+    "express": "^4.21.1",
+    "moment-timezone": "^0.5.46",
+    "node-telegram-bot-api": "^0.66.0",
+    "sqlite3": "^5.1.7",
+    "telegram-bot-api": "^2.0.1",
+    "ws": "^8.18.0"
+  }
+}
